cmake_minimum_required(VERSION 3.5)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY("001_Two Sum")
ADD_SUBDIRECTORY("002_Add Two Numbers")
ADD_SUBDIRECTORY("003_Longest Substring Without Repeating Characters")
ADD_SUBDIRECTORY("004_Median of Two Sorted Arrays")
ADD_SUBDIRECTORY("005_Longest Palindromic Substring")
ADD_SUBDIRECTORY("006_ZigZag Conversion")
ADD_SUBDIRECTORY("007_Reverse Integer")
ADD_SUBDIRECTORY("008_String to Integer (atoi)")
ADD_SUBDIRECTORY("009_Palindrome Number")
ADD_SUBDIRECTORY("010_Regular Expression Matching")
ADD_SUBDIRECTORY("011_Container With Most Water")
ADD_SUBDIRECTORY("012_Integer to Roman")
ADD_SUBDIRECTORY("013_Roman to Integer")
ADD_SUBDIRECTORY("014_Longest Common Prefix")
ADD_SUBDIRECTORY("015_3Sum")
ADD_SUBDIRECTORY("016_3Sum Closest")
ADD_SUBDIRECTORY("017_Letter Combinations of a Phone Number")
ADD_SUBDIRECTORY("018_4Sum")
ADD_SUBDIRECTORY("019_Remove Nth Node From End of List")
ADD_SUBDIRECTORY("020_Valid Parentheses")
ADD_SUBDIRECTORY("021_Merge Two Sorted Lists")
ADD_SUBDIRECTORY("022_Generate Parentheses")
ADD_SUBDIRECTORY("023_Merge k Sorted Lists")
ADD_SUBDIRECTORY("024_Swap Nodes in Pairs")
ADD_SUBDIRECTORY("025_Reverse Nodes in k-Group")
ADD_SUBDIRECTORY("026_Remove Duplicates from Sorted Array")
ADD_SUBDIRECTORY("027_Remove Element")
ADD_SUBDIRECTORY("028_Implement strStr()")
ADD_SUBDIRECTORY("029_Divide Two Integers")
ADD_SUBDIRECTORY("030_Substring with Concatenation of All Words")
ADD_SUBDIRECTORY("031_Next Permutation")
ADD_SUBDIRECTORY("032_Longest Valid Parentheses")
ADD_SUBDIRECTORY("033_Search in Rotated Sorted Array")
ADD_SUBDIRECTORY("034_Search for a Range")
ADD_SUBDIRECTORY("035_Search Insert Position")
ADD_SUBDIRECTORY("036_Valid Sudoku")
ADD_SUBDIRECTORY("037_Sudoku Solver")
ADD_SUBDIRECTORY("038_Count and Say")
ADD_SUBDIRECTORY("041_First Missing Positive")
ADD_SUBDIRECTORY("100_Same Tree")
ADD_SUBDIRECTORY("118_Pascal's Triangle")
ADD_SUBDIRECTORY("119_Pascal's Triangle II")
